tests/warn/infer-fun-res.stk
def foo(x: Int) = x + x

def a: Bool = foo 5 // error

def fact(x: Int) =       // error
  if 0 == x then 1
  else fact (x - 1) * x

def b: Bool = fact 10

def f(x: Int) =       // error
  val a = g x
  val b = a.field
  a

def g(x: Int) =
  val a = f x
  val b = a.field
  a

def h(x: Int): Int =
  val a = f x
  a.field

def f0(x: Int) = g0 x   // error
def g0(x: Int) = f0 x

def m(x: Int) =                   // error
  if 0 == x then { a = 1 }
  else { a = m (x - 1) , b = x }

def test1(x: Int): { a: Int } =
  m 10
